Address review comments

--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blended-element-interposed.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blended-element-interposed.html
@@ -3,6 +3,7 @@
     <head>
         <title>CSS Test: test mix-blend-mode for an element having a parent and a child.</title>
         <link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
+        <link rel="author" title="Mihai Tica" href="mailto:mitica@adobe.com">
         <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
         <meta name="assert" content="Test checks that an element with mix-blend-mode having a child blends with the parent element.">
@@ -25,7 +26,7 @@
         </style>
     </head>
     <body>
-        <p>Test passes if you can see a green square drawn on the screen.</p>
+        <p>Test passes if you can see a green square on the screen.</p>
         <div class="parent">
             <div class="blender">
                 <div class="child"></div>
