Update video test ref title

--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blended-element-interposed.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blended-element-interposed.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CSS Test: test mix-blend-mode for an element having a parent and a child.</title>
+        <title>CSS Reftest Reference</title>
         <link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
         <link rel="author" title="Mihai Tica" href="mailto:mitica@adobe.com">
         <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
