--- a/html/semantics/embedded-content-0/the-audio-element/audio_002.htm
+++ b/html/semantics/embedded-content-0/the-audio-element/audio_002.htm
@@ -5,29 +5,13 @@
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
   <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
   <link rel="help" href="http://www.w3.org/TR/html5/video.html#audio" />
+  <link rel="match" href="audio_content-ref.htm" />                                                                         
   <meta name="assert" content="Content inside the 'audio' element is not shown to the user." />
-  <script type="text/javascript" src="../../../../common/media.js"></script>
-  
 </head>
 <body>
-<pre>
-Content inside the 'audio' element is not shown to the user.
-</pre>
-<pre>
-
-http://www.w3.org/TR/html5/embedded-content-0.html#the-audio-element
-
-Content may be provided inside the audio element. User agents should not 
-show this content to the user; it is intended for older Web browsers 
-which do not support audio, so that legacy audio plugins can be tried, 
-or to show text to the users of these older browsers informing them of 
-how to access the audio contents. 
-
-</pre>
 <div id='testcontent'>
 
 <audio><span style="color: red;">FAIL</span></audio>
-
 
 </div>
 </body>
