--- a/html/semantics/embedded-content-0/the-audio-element/audio_content-ref.htm
+++ b/html/semantics/embedded-content-0/the-audio-element/audio_content-ref.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>HTML5 Media Elements: Content inside the 'audio' element is not shown to the user (image).</title>
+  <title>HTML5 Media Elements: Content inside the 'audio' element is not shown to the user.</title>
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
   <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
 </head>
