--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blended-element-with-transparent-pixels.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blended-element-with-transparent-pixels.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>CSS Test: blending between an element with transparent pixels and his child</title>
-		<link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
-		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
-		<meta name="flags" content="">
-		<meta name="assert" content="Test checks that an element with mix-blend-mode and transparent pixels doesn't blend with his child element.">
-		<link rel="match" href="reference/mix-blend-mode-blended-element-with-transparent-pixels-ref.html">
-		<style>
-			.parent {
-				opacity: 0.9;
-				background: yellow;/*rgb(255,255,0);*/
-				margin: 30px;
-				width: 120px;
-				height: 120px;
-				display: inline-block;
-			}
-			.blended {
-				width: 100px;
-				height: 100px;
-				display: inline-block;
-				mix-blend-mode: difference;
-				margin-top: 10px;
-				margin-left: 10px;
-			}
-			.childBlended {
-				background: red;/*rgb(255,0,0);*/
-				width: 80px;
-				height: 80px;
-				margin-top: 10px;
-				margin-left: 10px;
-			}
-		</style>
-	</head>
-	<body>
-		<p>Test passes if there is no complete red square on the screen.<br>
-		You should see a lime square with yellow borders.</p>
-		<div class="parent">
-			<div class="blended">
-				<div class="childBlended"></div>
-			</div>
-		</div>
-	</body>
+    <head>
+        <title>CSS Test: blending between an element with transparent pixels and a child element</title>
+        <link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
+        <link rel="author" title="Mihai Tica" href="mailto:mitica@adobe.com">
+        <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
+        <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
+        <meta name="assert" content="Test checks that an element having mix-blend-mode and 
+        background opacity blends with a child element as a group.">
+        <link rel="match" href="reference/mix-blend-mode-blended-element-with-transparent-pixels-ref.html">
+        <style type="text/css">
+            .parent {
+                position: absolute;
+                z-index: 1;
+                background: #FF0;
+                width: 100px;
+                height: 100px;
+            }
+            .blender {
+                width: 100px;
+                height: 100px;
+                background: rgba(255, 0, 255, 0.9);
+                mix-blend-mode: difference;
+                margin: 10px;
+            }
+            .blendedChild {
+                position: absolute;
+                width: 100px;
+                height: 100px;
+                background: #F00;
+                margin: 10px;
+            }
+        </style>
+    </head>
+    <body>
+        <p>Test passes if a lime square is drawn at the intersection of the squares.<br>
+        The first square should be drawn with yellow, the second one with aqua, having fuchsia corners.<br>
+        Third square should be green, with the right-lower part drawn in red.</p>
+        <div class="parent">
+            <div class="blender">
+                <div class="blendedChild"></div>
+            </div>
+        </div>
+    </body>
 </html>
