--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-child-of-blended-with-stacking-context.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-child-of-blended-with-stacking-context.html
@@ -4,10 +4,11 @@
         <title>CSS Test: blending between an element and a child that creates a stacking context</title>
         <link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
         <link rel="author" title="Mihai Tica" href="mailto:mitica@adobe.com">
+        <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
         <meta name="assert" content="Test checks that an element with mix-blend-mode and its child that creates
         a stacking context blend together as a group with the underlying content.">
-        <link rel="match" href="reference/mix-blend-mode-child-of-blended-with-stacking-context.html">
+        <link rel="match" href="reference/mix-blend-mode-child-of-blended-with-stacking-context-ref.html">
         <style type="text/css">
             .parent {
                 position: absolute;
