--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-video-sibling.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-video-sibling.html
@@ -7,6 +7,7 @@
         <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
         <meta name="assert" content="Test checks that a video element blends with an overlapping sibling element with some text inside">
+        <meta name="flags" content=""/>
         <link rel="mismatch" href="reference/mix-blend-mode-video-sibling-notref.html">
         <style type="text/css">
             div {
