--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-border-radius.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-border-radius.html
@@ -4,9 +4,11 @@
         <title>CSS Test: blending with parent having border radius</title>
         <link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
         <link rel="author" title="Mihai Tica" href="mailto:mitica@adobe.com">
+        <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
         <meta name="assert" content="Test checks that an element with mix-blend-mode blends
         with the parent element having border-radius.">
+        <meta name="flags" content=""/>
         <link rel="match" href="reference/mix-blend-mode-parent-with-border-radius-ref.html">
         <style type="text/css">
             .parent {
