--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-text.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-text.html
@@ -4,8 +4,10 @@
         <title>CSS Test: blending with an element containing text</title>
         <link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
         <link rel="author" title="Mihai Tica" href="mailto:mitica@adobe.com">
+        <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
         <meta name="assert" content="Test checks that an element with mix-blend-mode blends with a parent having text.">
+        <meta name="flags" content=""/>
         <link rel="match" href="reference/mix-blend-mode-parent-with-opacity-ref.html">
         <style type="text/css">
             .parent {
