--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blended-element-with-transparent-pixels.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-blended-element-with-transparent-pixels.html
@@ -8,6 +8,7 @@
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
         <meta name="assert" content="Test checks that an element having mix-blend-mode and
         background opacity blends with a child element as a group.">
+        <meta name="flags" content=""/>
         <link rel="match" href="reference/mix-blend-mode-blended-element-with-transparent-pixels-ref.html">
         <style type="text/css">
             .parent {
