--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-child-of-blended-with-stacking-context.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-child-of-blended-with-stacking-context.html
@@ -8,6 +8,7 @@
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
         <meta name="assert" content="Test checks that an element with mix-blend-mode and its child that creates
         a stacking context blend together as a group with the underlying content.">
+        <meta name="flags" content=""/>
         <link rel="match" href="reference/mix-blend-mode-child-of-blended-with-stacking-context-ref.html">
         <style type="text/css">
             .parent {
