--- a/html/semantics/edits/the-del-element/del_effect.html
+++ b/html/semantics/edits/the-del-element/del_effect.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>HTML Test: del_effect</title>
-    <link rel="author" title="Intel" href="http://www.intel.com/">
-    <link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/edits.html#the-del-element">
-  </head>
-  <body>
-    <p>Test passes if the text 'PASS' below is crossed-off.</p>
-    <p><del>PASS</del></p>
-  </body>
-</html>
+<meta charset=UTF-8>
+<title>HTML Test: Text in the del element should be 'line-through'</title>
+<link rel="author" title="Intel" href="http://www.intel.com/">
+<link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/edits.html#the-del-element">
+<script src="/resources/testharness.js"></script>
+<script src="/resources/testharnessreport.js"></script>
+
+<p><del>crossed-off text</del></p>
+<div id="log"></div>
+
+<script>
+  test(function() {
+    var element = document.getElementsByTagName('del')[0],
+        textDecoration = getComputedStyle(element).textDecorationLine ||
+                         getComputedStyle(element).textDecoration;
+    assert_equals(textDecoration, 'line-through');
+  });
+</script>
