--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/005.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/005.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>NOT invoking resource selection by inserting &lt;source> in div in video</title>
+<title>NOT invoking resource selection by inserting &lt;source> in &lt;div> in &lt;video></title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id=log></div>
