--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/014.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/014.html
@@ -7,9 +7,14 @@
 async_test(function(t) {
   var v = document.createElement('video');
   v.onloadstart = t.step_func(function() { assert_unreached(); });
-  v.setAttribute('src', '');
-  document.body.appendChild(v); // runs resource selection algorithm, but it will wait until this script has finished
-  v.removeAttribute('src'); // will make resource selection algorithm a no-op
-  window.onload = t.step_func(function() { v.onloadstart = null; t.done(); });
+  v.setAttribute('src', ''); // runs resource selection algorithm, but it will wait running the sync section until this script has finished
+  assert_equals(v.networkState, v.NETWORK_NO_SOURCE);
+  v.removeAttribute('src'); // will make resource selection algorithm revert to NETWORK_EMPTY and abort (in the sync section)
+  assert_equals(v.networkState, v.NETWORK_NO_SOURCE);
+  window.onload = t.step_func(function() {
+    v.onloadstart = null;
+    assert_equals(v.networkState, v.NETWORK_EMPTY);
+    t.done();
+  });
 });
 </script>
