Fix remaining append-to-documents. Remove 020 which appears to be a duplicate of 013. Fix a networkState check from NETWORK_NO_SOURCE to NETWORK_EMPTY (in 026).

--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/019.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/019.html
@@ -13,12 +13,11 @@ function createSource(src) {
 }
 var t = async_test(function(t) {
   v = document.createElement('video');
-  document.body.appendChild(v); // invokes resource selection
-  v.appendChild(createSource('/delay/?type=html&delay=50&content-type=video%2Fogg'));
+  v.appendChild(createSource('/delay/?type=html&delay=50&content-type=video%2Fogg')); // invokes resource selection
   v.firstChild.addEventListener('error', t.step_func(function() { clearTimeout(timeout); t.done(); }), false);
 });
 </script>
-<!-- now resource selection algorithm will continue its sync section -->
+<!-- now resource selection algorithm will continue its sync section (the </script> tag below provides a stable state) -->
 <!-- #a is candidate -->
 <!-- pointer is between #a and the end of the list -->
 <script>
