--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/026.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/026.html
@@ -3,21 +3,22 @@
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id=log></div>
-<video src></video><!-- invokes resource selection; networkState is 3 -->
 <script>
 var v;
 var t = async_test(function(t) {
-  v = document.querySelector('video');
-  assert_equals(v.networkState, 3, 'networkState before removing src');
+  v = document.createElement('video');
+  document.body.appendChild(v);
+  v.setAttribute('src', ''); // invokes resource selection
+  assert_equals(v.networkState, v.NETWORK_NO_SOURCE, 'networkState before removing src');
   v.removeAttribute('src'); // no side-effects
-  assert_equals(v.networkState, 3, 'networkState after removing src');
+  assert_equals(v.networkState, v.NETWORK_NO_SOURCE, 'networkState after removing src');
   v.parentNode.removeChild(v); // implicit pause() which ... does nothing
-  assert_equals(v.networkState, 3, 'networkState after removing v');
+  assert_equals(v.networkState, v.NETWORK_NO_SOURCE, 'networkState after removing v');
 });
 </script>
 <script>
 t.step(function() {
-  assert_equals(v.networkState, 3, 'networkState in separate script');
+  assert_equals(v.networkState, v.NETWORK_EMPTY, 'networkState in separate script');
   t.done();
 });
 </script>
