--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/021.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/021.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>invoking resource selection by inserting parent into a document</title>
+<title>NOT invoking resource selection by inserting parent into a document</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id=log></div>
@@ -8,11 +8,11 @@ async_test(function(t) {
   var v = document.createElement('video');
   var div = document.createElement('div');
   div.appendChild(v);
-  assert_equals(v.networkState, 0, 'networkState after div.appendChild(v)');
+  assert_equals(v.networkState, v.NETWORK_EMPTY, 'networkState after div.appendChild(v)');
   document.body.appendChild(div);
-  assert_equals(v.networkState, 3, 'networkState after document.body.appendChild(div)');
+  assert_equals(v.networkState, v.NETWORK_EMPTY, 'networkState after document.body.appendChild(div)');
   window.onload = t.step_func(function() {
-    assert_equals(v.networkState, 0, 'networkState in window.onload');
+    assert_equals(v.networkState, v.NETWORK_EMPTY, 'networkState in window.onload');
     t.done();
   });
 });
