--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/022.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/022.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>invoking resource selection by inserting document fragment into a document</title>
+<title>NOT invoking resource selection by inserting document fragment into a document</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id=log></div>
@@ -9,14 +9,14 @@ var t = async_test(function(t) {
   v = document.createElement('video');
   var fragment = document.createDocumentFragment();
   fragment.appendChild(v);
-  assert_equals(v.networkState, 0, 'networkState after fragment.appendChild(v)');
+  assert_equals(v.networkState, v.NETWORK_EMPTY, 'networkState after fragment.appendChild(v)');
   document.body.appendChild(fragment);
-  assert_equals(v.networkState, 3, 'networkState after document.body.appendChild(fragment)');
+  assert_equals(v.networkState, v.NETWORK_EMPTY, 'networkState after document.body.appendChild(fragment)');
 });
 </script>
 <script>
 t.step(function() {
-  assert_equals(v.networkState, 0, 'networkState in separate script');
+  assert_equals(v.networkState, v.NETWORK_EMPTY, 'networkState in separate script');
   t.done();
 });
 </script>
