--- a/FileAPI/Blob-slice.html
+++ b/FileAPI/Blob-slice.html
@@ -123,6 +123,17 @@ test(function() {
        {start:  8, end: 18, contents: "HIJKLMNOPf"},
        {start: 17, end: 21, contents: "foo"},
        {start:  4, end: 12, contents: "DEFGHIJK"}]
+    ],
+
+    [
+      [(new Uint8Array([0, 255, 0])).buffer,
+       new Blob(['abcd']),
+       'efgh',
+       'ijklmnopqrstuvwxyz'],
+      [{start:  1, end:  4, contents: "\uFFFD\u0000a"},
+       {start:  4, end:  8, contents: "bcde"},
+       {start:  8, end: 12, contents: "fghi"},
+       {start:  1, end: 12, contents: "\uFFFD\u0000abcdefghi"}]
     ]
   ];
 
