--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/027.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/027.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>moving &lt;source> around</title>
+<title>moving &lt;source> around and onerror</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id=log></div>
