Fix a title to match the test

--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/014.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/014.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>invoking resource selection by inserting into a document; await stable state</title>
+<title>invoking resource selection by setting src; await stable state</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id=log></div>
