--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/014.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/014.html
@@ -4,7 +4,7 @@
 <script src="/resources/testharnessreport.js"></script>
 <div id=log></div>
 <script>
-async_test(function(t) {
+var t = async_test(function(t) {
   var v = document.createElement('video');
   v.onloadstart = t.step_func(function() { assert_unreached(); });
   v.setAttribute('src', ''); // runs resource selection algorithm, but it will wait running the sync section until this script has finished
@@ -13,8 +13,12 @@ async_test(function(t) {
   assert_equals(v.networkState, v.NETWORK_NO_SOURCE);
   window.onload = t.step_func(function() {
     v.onloadstart = null;
-    assert_equals(v.networkState, v.NETWORK_EMPTY);
     t.done();
   });
+});
+</script>
+<script>
+t.step(function() {
+  assert_equals(v.networkState, v.NETWORK_EMPTY);
 });
 </script>
