--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/017.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/017.html
@@ -12,7 +12,7 @@ function createSource(src) {
 }
 var t = async_test(function(t) {
   v = document.createElement('video');
-  v.appendChild(createSource('/delay/?type=html&delay=50&content-type=video%2Fogg')); // invokes resource selection
+  v.appendChild(createSource('resources/not-a-video.ogv?pipe=trickle(d0.1)')); // invokes resource selection
 });
 </script>
 <!-- now resource selection algorithm will continue its sync section (the </script> tag below provides a stable state) -->
@@ -21,6 +21,6 @@ var t = async_test(function(t) {
 <script>
 t.step(function() {
   v.removeChild(v.firstChild); // just tests that we don't crash
-  setTimeout(t.step_func(function() { t.done(); }), 1000);
+  onload = t.step_func(function() { t.done(); });
 });
 </script>
