--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/019.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/019.html
@@ -13,7 +13,7 @@ function createSource(src) {
 }
 var t = async_test(function(t) {
   v = document.createElement('video');
-  v.appendChild(createSource('/delay/?type=html&delay=50&content-type=video%2Fogg')); // invokes resource selection
+  v.appendChild(createSource('resources/not-a-video.ogv?pipe=trickle(d0.1)')); // invokes resource selection
   v.firstChild.addEventListener('error', t.step_func(function() { clearTimeout(timeout); t.done(); }), false);
 });
 </script>
