--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/034.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/034.html
@@ -14,7 +14,7 @@ var x4 = 0;
 </script>
 <video
  ><source onerror=a++
- ><source onerror=b++ src='/delay/?type=html&delay=50&content-type=video%2Fogg'
+ ><source onerror=b++ src='resources/not-a-video.ogv?pipe=trickle(d0.1)'
  ><source onerror=x1++
  ><source onerror=x2++
  ><source onerror=x3++
