--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/035.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/035.html
@@ -25,7 +25,7 @@ t.step(function() {
   // now the sync section of resource selection should have run and should
   // have found no src="" or <source> thus networkState being set to NETWORK_EMPTY.
   // if the sync section was run when onclick returned, then networkState
-  // would be either LOADING or NETWORK_NO_SOURCE.
+  // would be either NETWORK_LOADING or NETWORK_NO_SOURCE.
   assert_equals(v.networkState, v.NETWORK_EMPTY, 'networkState in separate script');
   t.done();
 });
