--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/026.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/026.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>invoking resource selection with implicit pause() by removing from document</title>
+<title>NOT invoking resource selection by removing from document with NETWORK_EMPTY</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id=log></div>
@@ -8,12 +8,9 @@ var v;
 var t = async_test(function(t) {
   v = document.createElement('video');
   document.body.appendChild(v);
-  v.setAttribute('src', ''); // invokes resource selection
-  assert_equals(v.networkState, v.NETWORK_NO_SOURCE, 'networkState before removing src');
-  v.removeAttribute('src'); // no side-effects
-  assert_equals(v.networkState, v.NETWORK_NO_SOURCE, 'networkState after removing src');
-  v.parentNode.removeChild(v); // implicit pause() which ... does nothing
-  assert_equals(v.networkState, v.NETWORK_NO_SOURCE, 'networkState after removing v');
+  assert_equals(v.networkState, v.NETWORK_EMPTY, 'networkState after appending v to document');
+  v.parentNode.removeChild(v); // search for "When a media element is removed from a Document,"
+  assert_equals(v.networkState, v.NETWORK_EMPTY, 'networkState after removing v');
 });
 </script>
 <script>
