--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/029.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/029.html
@@ -10,7 +10,7 @@ var c = 0;
 </script>
 <video
  >x<source onerror=a++
- >x<source onerror=b++ src='resources/not-a-video.ogv?pipe=trickle(d0.1)'
+ >x<source onerror=b++ src='resources/delayed-broken-video.py'
  >x<source onerror=c++
  >x</video
 >
