--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/032.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/032.html
@@ -14,7 +14,7 @@ var x4 = 0;
 </script>
 <video
  ><source onerror=a++
- ><source onerror=b++ src='resources/not-a-video.ogv?pipe=trickle(d0.1)'
+ ><source onerror=b++ src='resources/delayed-broken-video.py'
  ><source onerror=c++
  ></video
 >
