--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/007.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/007.html
@@ -7,8 +7,9 @@
 var loadstartCount = 0;
 var s1ErrorCount = 0;
 var s2ErrorCount = 0;
-var v = document.createElement('video');
+var v;
 var t = async_test(function(t) {
+  v = document.createElement('video');
   v.onloadstart = function() { loadstartCount++; };
   var s1 = document.createElement('source');
   s1.src = 'resources/delayed-broken-video.py';
