--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/014.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/014.html
@@ -4,8 +4,9 @@
 <script src="/resources/testharnessreport.js"></script>
 <div id=log></div>
 <script>
+var v;
 var t = async_test(function(t) {
-  var v = document.createElement('video');
+  v = document.createElement('video');
   v.onloadstart = t.step_func(function() { assert_unreached(); });
   v.setAttribute('src', ''); // runs resource selection algorithm, but it will wait running the sync section until this script has finished
   assert_equals(v.networkState, v.NETWORK_NO_SOURCE);
